add server config file, separate server, service and controller, read mac addresses from respones, implement error handling. add start server script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "test.js"
+    "test": "test.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,6 @@
   "homepage": "https://github.com/ot316/IoTrigger-Rest-API#readme",
   "dependencies": {
     "express": "^4.17.1"
-  }
+  },
+  "keywords": []
 }
