fix format of example iotrim file

--- a/iotrim.example
+++ b/iotrim.example
@@ -1,64 +1,64 @@
 version;1
-device;destination;party;grouped
-allure-speaker;api.amazon.com;support;non-gr
-allure-speaker;d1enchupjctwud.cloudfront.net;support;non-gr
-bosiwo-camera-wired;54.157.82.107;support;non-gr
-bosiwo-camera-wired;210.72.145.44;third;non-gr
-echodot;arcus-uswest.amazon.com;first;non-gr
-echodot;.cloudfront.net;first;gr
-echodot;device-metrics-us.amazon.com;first;non-gr
-echodot;dp-gw.amazon.com;first;non-gr
-echodot;fireoscaptiveportal.com;first;non-gr
-echodot;prod.amcs-tachyon.com;support;non-gr
-echodot;s3-1-w.amazonaws.com;first;non-gr
-firetv;aax-eu.amazon-adsystem.com;third;non-gr
-firetv;arcus-uswest.amazon.com;first;non-gr
-firetv;bob-dispatch-prod-eu.amazon.com;first;non-gr
-firetv;.cloudfront.net;first;non-gr
-firetv;device-metrics-us.amazon.com;first;non-gr
-firetv;api.amazon.com;first;non-gr
-firetv;ktpx-eu.amazon.com;first;non-gr
-firetv;api-global.eu-west-1.prodaa.netflix.com;third;non-gr
-firetv;mas-ext-eu.amazon.com;first;non-gr
-firetv;mas-sdk.amazon.com;first;non-gr
-firetv;msh.amazon.com;first;non-gr
-google-home;youtube-ui.l.google.com;first;non-gr
-google-home;clientservices.googleapis.com;first;non-gr
-google-home;fcm.googleapis.com;first;non-gr
-google-home;.googlevideo.com;first;gr
-google-home;storage.googleapis.com;first;non-gr
-icsee-doorbell;47.52.222.172;support;non-gr
-icsee-doorbell;47.52.32.118;support;non-gr
-icsee-doorbell;api.gdxp.com;support;non-gr
-icsee-doorbell;oss-us-west-1.aliyuncs.com;support;non-gr
-nest-tstat;frontdoor.nest.com;first;non-gr
-philips-hub;diagnostics.meethue.com;first;non-gr
-philips-hub;www.ecdinterface.philips.com;first;non-gr
-reolink-cam-wired;pushx.reolink.com;first;non-gr
-roku-tv;api-global.eu-west-1.prodaa.netflix.com;third;non-gr
-roku-tv;configsvc.cs.roku.com;first;non-gr
-roku-tv;cooper.logs.roku.com;first;non-gr
-roku-tv;customerevents.eu-west-1.prodaa.netflix.com;third;non-gr
-roku-tv;ichnaea.eu-west-1.prodaa.netflix.com;third;non-gr
-roku-tv;partnerad.l.doubleclick.net;third;non-gr
-roku-tv;scribe.logs.roku.com;first;non-gr
-roku-tv;uiboot.eu-west-1.prodaa.netflix.com;third;non-gr
-smartthings-hub;fw-update2.smartthings.com;first;non-gr
-tplink-bulb;euw1-api.tplinkra.com;first;non-gr
-tplink-bulb;n-deventry.tplinkcloud.com;first;non-gr
-tplink-bulb;use1-api.tplinkra.com;first;non-gr
-tplink-plug2;euw1-api.tplinkra.com;first;non-gr
-tplink-plug2;n-deventry.tplinkcloud.com;first;non-gr
-tplink-plug2;use1-api.tplinkra.com;first;non-gr
-wansview-camera;159.65.95.225;support;non-gr
-wansview-camera;3.122.229.130;support;non-gr
-wansview-camera;ajcloud.net;support;non-gr
-wansview-camera;htpdate.ajcloud.net;support;non-gr
-wansview-camera;sdc-isc.ajcloud.net;support;non-gr
-wansview-camera;.backblaze.com;support;gr
-xiaomi-ricecooker;183.84.5.203;support;non-gr
-xiaomi-ricecooker;58.83.160.36;support;non-gr
-xiaomi-ricecooker;123.125.102.215;support;non-gr
-xiaomi-ricecooker;110.43.0.83;support;non-gr
-yi-camera;api.eu.xiaoyi.com;first;non-gr
-yi-camera;log.eu.xiaoyi.com;first;non-gr
+devicetype;device;destination;party;grouped
+;allure-speaker;api.amazon.com;support;non-gr
+;allure-speaker;d1enchupjctwud.cloudfront.net;support;non-gr
+;bosiwo-camera-wired;54.157.82.107;support;non-gr
+;bosiwo-camera-wired;210.72.145.44;third;non-gr
+Amazon Technologies Inc.;echodot;arcus-uswest.amazon.com;first;non-gr
+Amazon Technologies Inc.;echodot;.cloudfront.net;first;gr
+Amazon Technologies Inc.;echodot;device-metrics-us.amazon.com;first;non-gr
+Amazon Technologies Inc.;echodot;dp-gw.amazon.com;first;non-gr
+Amazon Technologies Inc.;echodot;fireoscaptiveportal.com;first;non-gr
+Amazon Technologies Inc.;echodot;prod.amcs-tachyon.com;support;non-gr
+Amazon Technologies Inc.;echodot;s3-1-w.amazonaws.com;first;non-gr
+Amazon Technologies Inc.;firetv;aax-eu.amazon-adsystem.com;third;non-gr
+Amazon Technologies Inc.;firetv;arcus-uswest.amazon.com;first;non-gr
+Amazon Technologies Inc.;firetv;bob-dispatch-prod-eu.amazon.com;first;non-gr
+Amazon Technologies Inc.;firetv;.cloudfront.net;first;non-gr
+Amazon Technologies Inc.;firetv;device-metrics-us.amazon.com;first;non-gr
+Amazon Technologies Inc.;firetv;api.amazon.com;first;non-gr
+Amazon Technologies Inc.;firetv;ktpx-eu.amazon.com;first;non-gr
+Amazon Technologies Inc.;firetv;api-global.eu-west-1.prodaa.netflix.com;third;non-gr
+Amazon Technologies Inc.;firetv;mas-ext-eu.amazon.com;first;non-gr
+Amazon Technologies Inc.;firetv;mas-sdk.amazon.com;first;non-gr
+Amazon Technologies Inc.;firetv;msh.amazon.com;first;non-gr
+Google, Inc.;google-home;youtube-ui.l.google.com;first;non-gr
+Google, Inc.;google-home;clientservices.googleapis.com;first;non-gr
+Google, Inc.;google-home;fcm.googleapis.com;first;non-gr
+Google, Inc.;google-home;.googlevideo.com;first;gr
+Google, Inc.;google-home;storage.googleapis.com;first;non-gr
+;icsee-doorbell;47.52.222.172;support;non-gr
+;icsee-doorbell;47.52.32.118;support;non-gr
+;icsee-doorbell;api.gdxp.com;support;non-gr
+;icsee-doorbell;oss-us-west-1.aliyuncs.com;support;non-gr
+Nest Labs Inc;nest-tstat;frontdoor.nest.com;first;non-gr
+Philips CFT;philips-hub;diagnostics.meethue.com;first;non-gr
+Philips CFT;philips-hub;www.ecdinterface.philips.com;first;non-gr
+;reolink-cam-wired;pushx.reolink.com;first;non-gr
+Roku, Inc;roku-tv;api-global.eu-west-1.prodaa.netflix.com;third;non-gr
+Roku, Inc;roku-tv;configsvc.cs.roku.com;first;non-gr
+Roku, Inc;roku-tv;cooper.logs.roku.com;first;non-gr
+Roku, Inc;roku-tv;customerevents.eu-west-1.prodaa.netflix.com;third;non-gr
+Roku, Inc;roku-tv;ichnaea.eu-west-1.prodaa.netflix.com;third;non-gr
+Roku, Inc;roku-tv;partnerad.l.doubleclick.net;third;non-gr
+Roku, Inc;roku-tv;scribe.logs.roku.com;first;non-gr
+Roku, Inc;roku-tv;uiboot.eu-west-1.prodaa.netflix.com;third;non-gr
+SAMJIN Co., Ltd.;smartthings-hub;fw-update2.smartthings.com;first;non-gr
+TP-LINK TECHNOLOGIES CO.,LTD;tplink-bulb;euw1-api.tplinkra.com;first;non-gr
+TP-LINK TECHNOLOGIES CO.,LTD;tplink-bulb;n-deventry.tplinkcloud.com;first;non-gr
+TP-LINK TECHNOLOGIES CO.,LTD;tplink-bulb;use1-api.tplinkra.com;first;non-gr
+TP-LINK TECHNOLOGIES CO.,LTD;tplink-plug2;euw1-api.tplinkra.com;first;non-gr
+TP-LINK TECHNOLOGIES CO.,LTD;tplink-plug2;n-deventry.tplinkcloud.com;first;non-gr
+TP-LINK TECHNOLOGIES CO.,LTD;tplink-plug2;use1-api.tplinkra.com;first;non-gr
+Shenzhen Smarteye Digital Electronics Co., Ltd;wansview-camera;159.65.95.225;support;non-gr
+Shenzhen Smarteye Digital Electronics Co., Ltd;wansview-camera;3.122.229.130;support;non-gr
+Shenzhen Smarteye Digital Electronics Co., Ltd;wansview-camera;ajcloud.net;support;non-gr
+Shenzhen Smarteye Digital Electronics Co., Ltd;wansview-camera;htpdate.ajcloud.net;support;non-gr
+Shenzhen Smarteye Digital Electronics Co., Ltd;wansview-camera;sdc-isc.ajcloud.net;support;non-gr
+Shenzhen Smarteye Digital Electronics Co., Ltd;wansview-camera;.backblaze.com;support;gr
+Xiaomi Communications Co Ltd;xiaomi-ricecooker;183.84.5.203;support;non-gr
+Xiaomi Communications Co Ltd;xiaomi-ricecooker;58.83.160.36;support;non-gr
+Xiaomi Communications Co Ltd;xiaomi-ricecooker;123.125.102.215;support;non-gr
+Xiaomi Communications Co Ltd;xiaomi-ricecooker;110.43.0.83;support;non-gr
+Shenzhen Zowee Technology Co., Ltd;yi-camera;api.eu.xiaoyi.com;first;non-gr
+Shenzhen Zowee Technology Co., Ltd;yi-camera;log.eu.xiaoyi.com;first;non-gr
